--- a/package.json
+++ b/package.json
@@ -12,8 +12,15 @@
     "@next/font": "13.1.1",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "hamburger-react": "^2.5.0",
     "next": "13.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-burger-menu": "^3.0.9",
+    "react-dom": "18.2.0",
+    "react-player": "^2.11.0",
+    "styled-components": "^5.3.6"
+  },
+  "devDependencies": {
+    "file-loader": "^6.2.0"
   }
 }
