--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "react-player": "^2.11.0",
     "styled-components": "^5.3.6"
   },
