--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@rooks/use-window-size": "^4.11.2",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "hamburger-react": "^2.5.0",
